--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -29,7 +29,7 @@
       <li class="navbar-right">
           <% if(logged == "no"){ %>
             <a href="https://searchthemovie.herokuapp.com/login" class="pull-right"> Login</a>
-            <a href="https://searchthemovie.herokuapp.com//register" class="pull-right"> Register</a>
+            <a href="https://searchthemovie.herokuapp.com/register" class="pull-right"> Register</a>
           <% }else{ %>
             <a href="https://searchthemovie.herokuapp.com/favouriteList" class="pull-left"> Movie Favourite List</a>
             <a class="pull-left"> <%= username %></a>
